# cgcourse-homework

./: .gitignore
task1/: CMakeLists.txt  conanfile.txt  main.cpp  run.sh
task1/assets/: frac-shader.fs  frac-shader.vs  imgui.ini
task2/: CMakeLists.txt  build.sh  conanfile.txt  main.cpp  opengl_shader.cpp  opengl_shader.h  run.sh
task2/assets/: imgui.ini  obj-shader.fs  obj-shader.vs  simple-shader.fs  simple-shader.vs  skybox-shader.fs  skybox-shader.vs
task3/: CMakeLists.txt  build.sh  imgui.ini  main.cpp  miniconfig.cpp  run.sh
task3/assets/: SaintPetersburg README.txt  config.cfg  ground-shader.fs  imgui.ini  obj-shader.fs  obj-shader.vs
task3/assets/lighthouse/: lighthouse.mtl
task3/src/: main.cpp  opengl_shader.h
task4/: CMakeLists.txt  run.sh
task4/assets/: TheShader.fs  TheShader.vs  config.cfg  imgui.ini
task4/src/: main.cpp  miniconfig.cpp  miniconfig.h  opengl_shader.cpp
